# GLiNER.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: UpdateSubmodules.cmake
examples/: .gitignore  CMakeLists.txt  README.md  download-gliner-multitask-large-v0.5.sh  download-gliner_small-v2.1.sh  inference.cpp  inference_gpu.cpp  inference_token_level.cpp
include/: decoder.h  gliner_config.h  gliner_structs.h  model.h  processor.h  tokenizer_utils.h
include/GLiNER/: decoder.hpp  gliner_config.hpp  gliner_structs.hpp  model.hpp  processor.hpp  tokenizer_utils.hpp
src/: CMakeLists.txt  decoder.cpp  gliner_structs.cpp  model.cpp  processor.cpp  tokenizer_utils.cpp
tests/: CMakeLists.txt  test.cpp
